--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ commands =
     pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images
 
 
-[testenv:py{311,312}-{linkcheck,doctest}]
+[testenv:py{311,312}-doctest]
 allowlist_externals =
     Xvfb
     make
@@ -84,15 +84,13 @@ conda_spec =
     py311: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
     py312: {toxinidir}{/}requirements{/}locks{/}py312-lock-linux-64.txt
 description =
-    Build, test and link-check the geovista documentation.
+    Build and doctest the geovista documentation.
 platform =
     linux
 passenv =
     GEOVISTA_DOWNLOAD
     CI
 setenv =
-    linkcheck: BUILDER = linkcheck
-    doctest: BUILDER = doctest
     GEOVISTA_POOCH_MUTE = true
 usedevelop =
     true
@@ -100,4 +98,4 @@ commands =
     {env:GEOVISTA_DOWNLOAD:}
     make clean
     make html-noplot
-    make {env:BUILDER}
+    make doctest
