--- a/.github/workflows/ci-linkcheck.yml
+++ b/.github/workflows/ci-linkcheck.yml
@@ -44,7 +44,7 @@ jobs:
           fail: false
 
       - name: "report failure"
-        if: failure()
+        if: steps.lychee.outputs.exit_code != 0
         uses: peter-evans/create-issue-from-file@e8ef132d6df98ed982188e460ebb3b5d4ef3a9cd
         with:
           title: "chore: linkcheck failure"
