--- a/pyproject.toml
+++ b/pyproject.toml
@@ -308,7 +308,6 @@ readme = { file = "README.md", content-type = "text/markdown" }
 
 
 [tool.setuptools.dynamic.optional-dependencies]
-cmap = { file = ["requirements/pypi-optional-cmap.txt"] }
 docs = { file = ["requirements/pypi-optional-docs.txt"] }
 exam = { file = ["requirements/pypi-optional-exam.txt"] }
 test = { file = ["requirements/pypi-optional-test.txt"] }
@@ -407,3 +406,113 @@ showcontent = true
 directory = "misc"
 name = "🧰 Miscellaneous"
 showcontent = true
+
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["linux-64"]
+
+[tool.pixi.environments]
+default = { features = [], solve-group = "default" }
+dev = { features = ["dev"], solve-group = "default" }
+docs = { features = ["dev", "docs"], solve-group = "default" }
+geovista = { features = ["dev", "docs", "test"], solve-group = "default" }
+test = { features = ["dev", "test"], solve-group = "default" }
+
+dev-py311 = { features = ["dev", "py311"], solve-group = "py311" }
+docs-py311 = { features = ["dev", "docs", "py311"], solve-group = "py311" }
+geovista-py311 = { features = [
+  "dev",
+  "docs",
+  "py311",
+  "test",
+], solve-group = "py311" }
+py311 = { features = ["py311"], solve-group = "py311" }
+test-py311 = { features = ["dev", "py311", "test"], solve-group = "py311" }
+
+dev-py312 = { features = ["dev", "py312"], solve-group = "py312" }
+docs-py312 = { features = ["dev", "docs", "py312"], solve-group = "py312" }
+geovista-py312 = { features = [
+  "dev",
+  "docs",
+  "py312",
+  "test",
+], solve-group = "py312" }
+py312 = { features = ["py312"], solve-group = "py312" }
+test-py312 = { features = ["dev", "py312", "test"], solve-group = "py312" }
+
+[tool.pixi.dependencies]
+cartopy = ">=0.22"
+click = "*"
+click-default-group = "*"
+cmocean = "*"
+colorcet = "*"
+lazy_loader = ">=0.4"
+netcdf4 = "*"
+numpy = ">=1.25"
+platformdirs = "*"
+pooch = "*"
+pykdtree = "*"
+pyproj = ">=3.3"
+pyvista = ">=0.43.1"
+setuptools = ">=64"
+setuptools-scm = ">=8"
+
+[tool.pixi.feature.dev.dependencies]
+fastparquet = "*"
+h3-py = ">=4.1"
+pandas = "*"
+pre-commit = "*"
+rasterio = ">=1.4.2"
+ruff = "*"
+
+[tool.pixi.feature.dev.pypi-dependencies]
+geovista = { path = ".", editable = true }
+
+[tool.pixi.feature.dev.tasks]
+fmt = "ruff format"
+lint = "ruff check"
+
+[tool.pixi.feature.docs.dependencies]
+ipykernel = "*"
+ipywidgets = "*"
+joblib = "*"
+jupyter-server-proxy = "*"
+myst-nb = "*"
+nest-asyncio = "*"
+numpydoc = "*"
+pydata-sphinx-theme = "!=0.16.0,!=0.16.1" # https://github.com/bjlittle/geovista/issues/1247
+sphinx = ">=7.3"
+sphinx-autoapi = ">=3.2.0"
+sphinx-book-theme = ">=1.1.3"
+sphinx-click = "*"
+sphinx-copybutton = "*"
+sphinx-design = "*"
+sphinx-gallery = ">=0.17"
+sphinx-tags = ">=0.4"
+sphinx-togglebutton = "*"
+sphinx_changelog = ">=1.6.0"
+towncrier = "*"
+trame = "*"
+trame-client = "*"
+trame-server = "*"
+trame-vtk = "*"
+trame-vuetify = "*"
+
+[tool.pixi.feature.docs.pypi-dependencies]
+sphinx-tippy = "*"
+
+[tool.pixi.feature.py311.dependencies]
+pip = "*"
+python = "3.11.*"
+
+[tool.pixi.feature.py312.dependencies]
+pip = "*"
+python = "3.12.*"
+
+[tool.pixi.feature.test.dependencies]
+codecov = "*"
+pytest = ">=6.0"
+pytest-cov = "*"
+pytest-mock = "*"
+pytest-pyvista = "*"
+pytest-xvfb = "*"
