--- a/pyproject.toml
+++ b/pyproject.toml
@@ -441,29 +441,30 @@ py312 = { features = ["py312"], solve-group = "py312" }
 test-py312 = { features = ["dev", "py312", "test"], solve-group = "py312" }
 
 [tool.pixi.dependencies]
-cartopy = ">=0.22,<0.24.2"
-click = "<8.1.9"
-click-default-group = "<1.2.5"
-cmocean = "<4.0.4"
-colorcet = "<3.1.1"
-lazy_loader = ">=0.4,<0.4.1"
-netcdf4 = "<1.7.3"
-numpy = ">=1.25,<2.2.5"
-platformdirs = "<4.3.8"
-pooch = "<1.8.3"
-pykdtree = "<1.4.2"
-pyproj = ">=3.3,<3.7.2"
+cartopy = ">=0.24.0,<0.25"
+click = ">=8.2.1,<9"
+click-default-group = ">=1.2.4,<2"
+cmocean = ">=4.0.3,<5"
+colorcet = ">=3.1.0,<4"
+lazy_loader = ">=0.4,<0.5"
+netcdf4 = ">=1.7.2,<2"
+numpy = ">=2.2.6,<3"
+platformdirs = ">=4.3.8,<5"
+pooch = ">=1.8.2,<2"
+pykdtree = ">=1.4.1,<2"
+pyproj = ">=3.7.1,<4"
 pyvista = ">=0.43.1,<0.44.3"
-setuptools = ">=64,<78.1.2"
-setuptools-scm = ">=8,<8.1.1"
+setuptools = ">=80.9.0,<81"
+setuptools-scm = ">=8.3.1,<9"
+vtk = "<9.4"
 
 [tool.pixi.feature.dev.dependencies]
-fastparquet = "<2024.11.1"
-h3-py = ">=4.1,<4.2.3"
-pandas = "<2.2.4"
-pre-commit = "<4.2.1"
-rasterio = ">=1.4.2,<1.4.4"
-ruff = "<0.11.7"
+fastparquet = ">=2024.11.0,<2025"
+h3-py = ">=4.2.2,<5"
+pandas = ">=2.2.3,<3"
+pre-commit = ">=4.2.0,<5"
+rasterio = ">=1.4.3,<2"
+ruff = ">=0.11.12,<0.12"
 
 [tool.pixi.feature.dev.pypi-dependencies]
 geovista = { path = ".", editable = true }
@@ -473,51 +474,57 @@ fmt = "ruff format"
 lint = "ruff check"
 
 [tool.pixi.feature.docs.dependencies]
-ipykernel = "<6.29.6"
-ipywidgets = "<8.1.7"
-joblib = "<1.4.3"
-jupyter-server-proxy = "<4.4.1"
-myst-nb = "<1.2.1"
-nest-asyncio = "<1.6.1"
-numpydoc = "<1.8.1"
+ipykernel = ">=6.29.5,<7"
+ipywidgets = ">=8.1.7,<9"
+joblib = ">=1.5.1,<2"
+jupyter-server-proxy = ">=4.4.0,<5"
+myst-nb = ">=1.2.0,<2"
+nest-asyncio = ">=1.6.0,<2"
+numpydoc = ">=1.8.0,<2"
 pydata-sphinx-theme = "!=0.16.0,!=0.16.1,<0.16.2" # https://github.com/bjlittle/geovista/issues/1247
-sphinx = ">=7.3,<8.2.4"
-sphinx-autoapi = ">=3.2.0,<3.6.1"
-sphinx-book-theme = ">=1.1.3,<1.1.5"
-sphinx-click = "<6.0.1"
-sphinx-copybutton = "<0.5.3"
-sphinx-design = "<0.6.2"
-sphinx-gallery = ">=0.17,<0.19.1"
-sphinx-tags = ">=0.4,<0.4.1"
-sphinx-togglebutton = "<0.3.3"
-sphinx_changelog = ">=1.6.0,<1.6.1"
-towncrier = "<24.8.1"
-trame = ">=2.5.2,<3.8.3"
-trame-client = ">=2.12.7,<3.7.2"
-trame-server = ">=2.11.7,<3.4.1"
-trame-vtk = ">=2.5.8,<2.8.16"
-trame-vuetify = ">=2.3.1,<3.0.1"
+sphinx = ">=8.2.3,<9"
+sphinx-autoapi = ">=3.5.0,<4"
+sphinx-book-theme = ">=1.1.3,<2"
+sphinx-click = ">=6.0.0,<7"
+sphinx-copybutton = ">=0.5.2,<0.6"
+sphinx-design = ">=0.6.1,<0.7"
+sphinx-gallery = ">=0.19.0,<0.20"
+sphinx-tags = ">=0.4,<0.5"
+sphinx-togglebutton = ">=0.3.2,<0.4"
+sphinx_changelog = ">=1.6.0,<2"
+towncrier = ">=24.8.0,<25"
+trame = "==3.9.0"
+trame-client = ">=3.9.0,<4"
+trame-server = ">=3.4.0,<4"
+trame-vtk = "==2.8.15"
+trame-vuetify = "==3.0.1"
 
 [tool.pixi.feature.docs.pypi-dependencies]
-sphinx-tippy = "<0.4.4"
+sphinx-tippy = ">=0.4.3,<0.5"
 
 [tool.pixi.feature.docs.tasks.make]
 args = [{ "arg" = "option", "default" = "html-noplot" }]
 cmd = "make {{ option }}"
 cwd = "docs"
 
+[tool.pixi.feature.docs.tasks.serve]
+args = [{ "arg" = "option", "default" = "html-noplot" }]
+cmd = "make serve-html"
+cwd = "docs"
+depends-on = [{ "task" = "make", "args" = ["{{ option }}"] }]
+
 [tool.pixi.feature.py311.dependencies]
-pip = "<25.0.2"
+pip = ">=25.1.1,<26"
 python = "3.11.*"
 
 [tool.pixi.feature.py312.dependencies]
-pip = "<25.0.2"
+pip = ">=25.1.1,<26"
 python = "3.12.*"
 
 [tool.pixi.feature.test.dependencies]
-codecov = "<2.1.14"
-pytest = ">=6.0,<8.3.6"
-pytest-cov = "<6.1.2"
-pytest-mock = "<3.14.1"
-pytest-pyvista = "<0.1.10"
-pytest-xvfb = "<3.1.2"
+codecov = ">=2.1.13,<3"
+pytest = ">=8.4.0,<9"
+pytest-cov = ">=6.1.1,<7"
+pytest-mock = ">=3.14.1,<4"
+pytest-pyvista = ">=0.1.9,<0.2"
+pytest-xvfb = ">=3.1.1,<4"
