--- a/.github/workflows/ci-linkcheck.yml
+++ b/.github/workflows/ci-linkcheck.yml
@@ -1,4 +1,5 @@
 # Reference:
+#   - https://github.com/actions/cache
 #   - https://github.com/actions/checkout
 #   - https://github.com/lycheeverse/lychee-action
 #   - https://github.com/peter-evans/create-issue-from-file
@@ -36,11 +37,17 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: "lychee cache"
+        uses: actions/cache@v4
+        with:
+          path: .lycheecache
+          key: cache-lychee
+
       - name: "linkcheck"
         id: lychee
         uses: lycheeverse/lychee-action@1d97d84f0bc547f7b25f4c2170d87d810dc2fb2c
         with:
-          args: "--no-progress --verbose './docs/src/**/*.md' './docs/src/**/*.rst' './docs/src/**/*.txt' './changelog/*.rst' './src/**/*.py'"
+          args: "--cache --no-progress --verbose './docs/src/**/*.md' './docs/src/**/*.rst' './docs/src/**/*.txt' './changelog/*.rst' './src/**/*.py'"
           fail: false
 
       - name: "report failure"
