--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -76,12 +76,12 @@ jobs:
           frozen: true
           activate-environment: true
 
-#      - name: "cartopy cache"
-#        uses: ./.github/workflows/composite/cartopy-cache
-#        with:
-#          cache_period: ${{ env.CACHE_PERIOD }}
-#          env_name: ${{ env.ENV_NAME }}
-#
+      - name: "cartopy cache"
+        uses: ./.github/workflows/composite/cartopy-cache
+        with:
+          cache_period: ${{ env.CACHE_PERIOD }}
+          env_name: ${{ env.ENV_NAME }}
+
 #      - name: "geovista cache"
 #        uses: ./.github/workflows/composite/geovista-cache
 #        with:
