--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -82,10 +82,10 @@ jobs:
           cache_period: ${{ env.CACHE_PERIOD }}
           env_name: ${{ env.ENV_NAME }}
 
-#      - name: "geovista cache"
-#        uses: ./.github/workflows/composite/geovista-cache
-#        with:
-#          cache_period: ${{ env.CACHE_PERIOD }}
+      - name: "geovista cache"
+        uses: ./.github/workflows/composite/geovista-cache
+        with:
+          cache_period: ${{ env.CACHE_PERIOD }}
 
       - name: "${{ matrix.session }} ${{ matrix.marker }} (${{ matrix.version }})"
         env:
