--- a/.github/workflows/ci-changelog.yml
+++ b/.github/workflows/ci-changelog.yml
@@ -22,8 +22,7 @@ on:
 jobs:
   changelog:
     name: 'validate changelog'
-
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
 
     defaults:
       run:
