--- a/.github/workflows/ci-citation.yml
+++ b/.github/workflows/ci-citation.yml
@@ -18,7 +18,8 @@ concurrency:
 jobs:
   validate:
     name: "validate"
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
+
     steps:
       - uses: actions/checkout@v4
         with:
