--- a/.github/workflows/ci-label.yml
+++ b/.github/workflows/ci-label.yml
@@ -14,7 +14,8 @@ concurrency:
 
 jobs:
   triage:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
+
     steps:
       - uses: actions/checkout@v4
         with:
