--- a/.github/workflows/ci-manifest.yml
+++ b/.github/workflows/ci-manifest.yml
@@ -25,7 +25,7 @@ concurrency:
 jobs:
   manifest:
     name: "check-manifest"
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
 
     defaults:
       run:
