--- a/.github/workflows/ci-update-pr-branch.yml
+++ b/.github/workflows/ci-update-pr-branch.yml
@@ -15,7 +15,8 @@ concurrency:
 
 jobs:
   autoupdate:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
+
     steps:
       - name: "generate token"
         uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a
