--- a/.github/workflows/ci-manifest.yml
+++ b/.github/workflows/ci-manifest.yml
@@ -10,7 +10,7 @@ on:
     branches:
       - "main"
       - "v*x"
-      - "!conda-lock-auto-update"
+      - "!pixi-auto-update"
       - "!pre-commit-ci-update-config"
       - "!dependabot/*"
     tags:
@@ -25,8 +25,7 @@ concurrency:
 jobs:
   manifest:
     name: "check-manifest"
-
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
 
     defaults:
       run:
