--- a/.github/workflows/composite/cartopy-cache/action.yml
+++ b/.github/workflows/composite/cartopy-cache/action.yml
@@ -1,10 +1,6 @@
 name: "cartopy-cache"
 description: "create and cache cartopy assets"
 
-#
-# Assumes the environment contains the following variables:
-#   - CONDA
-#
 inputs:
   cache_period:
     description: "conda environment cache timestamp"
@@ -25,13 +21,7 @@ runs:
     - if: steps.cartopy-cache.outputs.cache-hit != 'true'
       env:
         CARTOPY_SHARE_DIR: ~/.local/share/cartopy
-        CARTOPY_FEATURE: https://raw.githubusercontent.com/SciTools/cartopy/v0.20.0/tools/cartopy_feature_download.py
       shell: bash
       run: |
-        # Require to explicitly activate the environment within the composite action.
-        source ${{ env.CONDA }}/etc/profile.d/conda.sh >/dev/null 2>&1
-        conda activate ${{ inputs.env_name }}
-        wget --quiet ${CARTOPY_FEATURE}
         mkdir -p ${CARTOPY_SHARE_DIR}
-        # Requires a pre-installed version of cartopy within the environment.
-        python cartopy_feature_download.py physical --output ${CARTOPY_SHARE_DIR} --no-warn
+        pixi run --frozen python cartopy_feature_download.py physical --output ${CARTOPY_SHARE_DIR} --no-warn
