--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
 prune .github
-prune .tox
 prune changelog
 prune docs
 prune requirements
@@ -18,4 +17,4 @@ include *.md
 exclude CHANGELOG.rst
 include CITATION.cff
 exclude codecov.yml
-exclude tox.ini
+exclude pixi.lock
